# signwriting-illustration

./: .gitignore  README.md  paper.md  pyproject.toml
.github/workflows/: lint.yaml
datasets/SignPuddle/: README.md  collect_data.py  writing.json
datasets/Vokabeltrainer/: .gitignore  README.md  Vokabeltrainer-Glossen.txt  extract_illustrations.py  get_signwriting.py  lexicon.tsv  wortschatz.tsv  writing.json
datasets/Vokabeltrainer/sw_examples/: 00004.mov  00007.mov  00015.mov
signwriting_illustration/: create_images.py  create_prompts.py  illustrate.py  signwriting_images.py
signwriting_illustration/controlnet/: README.md  dataset.py  train.py  train.sh  visualize_last_3.py
signwriting_illustration/controlnet_huggingface/: README.md  dataset.py  push_to_hub.py  train.sh
train/: README.md  prompt.json
