[project]
name = "signwriting-illustration"
description = "Illustrate signs using SignWriting."
version = "0.0.1"
authors = [
    { name = "Amit Moryossef", email = "amitmoryossef@gmail.com" },
]
readme = "README.md"
dependencies = [
    "signwriting @ git+https://github.com/sign-language-processing/signwriting"
]

[project.optional-dependencies]
dev = [
    "pylint"
]


[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.pylint]
max-line-length = 120
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116", # Missing function or method docstring
]
ignore-paths = '^signwriting_illustration/controlnet/ControlNet/.*$'

[tool.pylint.typecheck]
generated-members = ["cv2.*"]

[tool.setuptools]
packages = [
    "signwriting_illustration"
]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["signwriting_illustration"]
